# run_anuga

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  install.txt  pyproject.toml  requirements.txt  run.py  run_anuga.py  run_anuga.spec
.github/: CODEOWNERS
.github/scripts/: marker_lint.py
.github/workflows/: canary-dispatch.yml  canary-receive.yml  ci.yml  release.yml
batch/: Dockerfile  Dockerfile.gpu  entrypoint.sh  terrain-compute-entrypoint.sh  terrain-compute.Dockerfile
docs/: 2026-07-08-w2.3-mass-balance-redproof.md  run-anuga-guide.html  shape-variance-audit.md  task-1271-breakline-grading-benchmark.md  task-1299-burn-decouple-preflight-delta.md
examples/australian_floodplain/: LICENSE_DATA.md  scenario.json
examples/australian_floodplain/inputs/: boundary.geojson  dem.tif  inflow.geojson
examples/merewether/: scenario.json
examples/merewether/inputs/: boundary.geojson  dem.tif  dem.tif.aux.xml  friction.geojson  inflow.geojson
examples/merewether/validation/: observation_points.geojson  validate.py
examples/small_test/: scenario.json
experiments/merewether/: .gitignore  collect_results.py  experiment.json  run_experiments.py
experiments/merewether/meshers/gmsh/flat/: scenario.json
experiments/merewether/meshers/gmsh/flat/inputs/: merewether_dem.tif
experiments/merewether/meshers/gmsh/proximity/: scenario.json
experiments/merewether/meshers/gmsh/proximity/inputs/: merewether_dem_original.tif  structure.geojson
experiments/merewether/meshers/jigsaw/flat/: scenario.json
experiments/merewether/meshers/jigsaw/flat/inputs/: friction.geojson
experiments/merewether/meshers/jigsaw/topo/: scenario.json
experiments/merewether/meshers/triangle/burn/: scenario.json
experiments/merewether/meshers/triangle/burn/inputs/: boundary.geojson  structure.geojson
experiments/merewether/meshers/triangle/holes/: scenario.json
experiments/merewether/meshers/triangle/holes/inputs/: inflow.geojson
experiments/merewether/meshers/triangle/mannings/: scenario.json
experiments/merewether/meshers/triangle/mannings/inputs/: structure.geojson
experiments/merewether/shared_inputs/: boundary.geojson  friction.geojson  inflow.geojson  merewether_dem_original.tif  structure.geojson  structure_empty.geojson  structure_holes.geojson
experiments/merewether/validation/: observed_points.csv
notes/: merewether-e2e-implementation.md  merewether-e2e-report.html  merewether-solutions.md  merewether-timestep-analysis.md  mesh-experiment-progress.md  mpi-memory-analysis.md  oom-and-memory.md  pyinstaller-lessons.md  test-suite-design.md  upstream-wheel-workflow.md  v0.1.0-release-status.md  wheel-build-debug-log.md
pyinstaller_hooks/: rthook_projdata.py
run_anuga/: __init__.py  _handoff.py  _http.py  _imports.py  _logging.py  breakline_conditioner.py  callbacks.py  cli.py  config.py  defaults.py  diagnostics.py  logging_setup.py  phase_tracker.py  run.py  run_utils.py  schema.py
run_anuga/meshers/: __init__.py  gmsh_mesher.py  jigsaw_mesher.py
scripts/: prepare_merewether_scenario.py
styles/: depth_6m.sld  flow_20m3s.sld  velocity_6ms.sld
test-docker/: Dockerfile  helpers.sh  phase1.sh  phase2.sh  phase3.sh  phase4.sh  phase5.sh  test_readme.sh
tests/: conftest.py  test_apply_inflows.py  test_boundaries.py  test_breakline_conditioner.py  test_breakline_conformance.py  test_callbacks.py  test_callbacks_http.py  test_callbacks_v2.py  test_catchment_guard.py  test_checkpoint.py  test_cli.py  test_cli_resolve.py  test_config.py  test_coordinate_checks.py  test_create_boundary_polygon.py  test_data_transforms.py  test_defaults.py  test_diagnostics.py  test_e2e_merewether.py  test_entrypoint_contract.py  test_friction_and_crs.py  test_golden_mesh.py  test_gpu_mode_assertion.py  test_handoff.py  test_handoff_resource_report.py  test_http_helper.py  test_imports.py  test_integration.py  test_log_handler.py  test_logging_setup.py  test_mass_balance.py  test_mesh_qa.py  test_mesh_regions.py  test_mpi.py  test_nan_guard.py  test_negative_depth_protection.py  test_package_loading.py  test_phase_durations.py  test_polar_quadrants.py  test_post_process.py  (+16 more)
tests/data/minimal_package/: scenario.json
tests/data/minimal_package/inputs/: boundary.geojson
tests/data/package_testbull_existing_2m_889/: scenario.json
tests/data/package_testbull_existing_2m_889/inputs/: bdy_344_boundary_01.json  buffer.dbf  buffer.shp  buffer.shx  inf_344_inflow_01.json
