[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "run_anuga"
version = "1.1.0"
description = "Run ANUGA flood simulations from Hydrata scenario packages"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
# Pure-Python sim deps. Wheels available on bare CI runners (no apt needed).
# Split out from [sim] so [dev] can pull them in without dragging GDAL/rasterio.
sim-light = [
    "numpy>=2.0",
    "pandas>=2.0",
    "dill>=0.3",
    "psutil>=5.9",
    "shapely>=2.0",
]
sim = [
    "run_anuga[sim-light]",
    "GDAL",
    "rasterio>=1.3",
    "geopandas>=0.13",
]
viz = [
    "matplotlib>=3.6",
    "opencv-python>=4.7",
]
platform = [
    "requests>=2.28",
    "boto3>=1.26",
    "pystac>=1.7",
]
full = [
    "run_anuga[sim]",
    "run_anuga[viz]",
    "run_anuga[platform]",
    # anuga-community/anuga_core declares numpy>=2.0.0 since v3.3.0 (2026-03-30).
    "anuga>=3.3.0",
    "celery>=5.2",
    "django>=4.2",
]
dev = [
    "run_anuga[sim-light]",
    "pytest>=7.0",
    "pytest-timeout>=2.1",  # provides --timeout, used by the e2e Merewether gate
    "ruff>=0.1",
    "jsonschema>=4.17",
    "hypothesis>=6.0",
    "requests>=2.28",
]

[project.scripts]
run-anuga = "run_anuga.cli:main"

[tool.setuptools.packages.find]
include = ["run_anuga*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
